@@ -1,3 +1,10 @@
+2004-07-21  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* rules.mak, iface/addsys/makefile, iface/native/makefile,
+	tools/Makefile: Be quiet if VERBOSE=no.
+	* tools/helper.mk: Print module name if it was successfully built.
+	* tools/regtests.c, tools/wine2ros/wine2ros.c: Be quiet.
+
 2004-06-05  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* tools/helper.mk: Skip automatic dependency tracking if
